-*- outline -*-

This file contains information about the version numbers
and what's changed.
Hopefully, the #defines ETHERIP_MAYOR and ETHERIP_MINOR
in ether_ipApp/src/drvEtherIP.h are updated accordingly,
so that you can see the current version at runtime via
drvEtherIP_report.

* 2010, Nov 5 ether_ip-2-20
Jeff Hill noticed that driver could invoke for example ao record callbacks,
i.e. call scanOnce() on a record, while the IOC is still starting up
and the "onceQ" ring buffer is not initalized.
Driver now waits until IOC startup is 'done'.

* 2010, Aug 19
No new version, but sources moved to Source Forge.

* 2009, Sept 1 ether_ip-2-19
'do_write' flag got lost when a tag marked for writing
didn't fit into a network request and was moved into
the next one.

* 2009, June 1 ether_ip-2-18
Attempt to fix crashes which look like this:

1a1ede4 EIP_write_tag +2490: 1a1ddc4 (19fdf90)
1a1de34 EIP_write_tag +14e0: EIP_startup (19fdfb0, 19fdf10)
1a1c60c EIP_startup +70 : 1a1b4e0 (19fdfb0)
1a1b534 EncapsulationHeader_status+668: 1a1b0dc (19fdfb0)
1a1b13c EncapsulationHeader_status+270: EIP_reserve_buffer (19fdfc8, 19fdfc4, 18)
1a1a960 EIP_reserve_buffer+9c : malloc () 

Also with EIP_reserve_buffer(.., 6e) calling free(), and
examples which don't start in EIP_startup().

Exact reason for memory corruption is unclear,
but to reduce the likelyhood of getting the symptom
the EIP_reserve_buffer code for the communication buffer
was removed, instead allocating a full size buffer on startup.
Also removed other uses of EIP_reserve_buffer,
only keeping the basic idea for the allocation
of data for individual tags.
The 'mem string buffer' for logging was also removed,
since I never used it

Found a possible memory corruption scenario when a "write"
cycle was interrupted by an error:
1) Record/device support requests 'do_write' for a tag
2) driver determines what to do, sees do_write, sets is_writing,
   counts write size towards expected packet sizes